--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>edu.evhen</groupId>
     <artifactId>cursova</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>cursova</name>
     <description>Demo project for Spring Boot</description>
 
