--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 spring.freemarker.suffix: .ftl
 #mongodb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=cursova1
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=cursova1
 spring.security.user.password=admin
+spring.data.mongodb.uri=mongodb://heroku_04hms6s9:heroku_04hms6s9@ds263172.mlab.com:63172/heroku_04hms6s9
