--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.freemarker.suffix: .ftl
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=cursova1
 spring.security.user.password=admin
-spring.data.mongodb.uri=mongodb://heroku_04hms6s9:heroku_04hms6s9@ds263172.mlab.com:63172/heroku_04hms6s9
+spring.data.mongodb.uri=mongodb://Petro:petro35@ds263172.mlab.com:63172/heroku_04hms6s9
