--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.freemarker.suffix: .ftl
 #spring.data.mongodb.database=cursova1
 spring.security.user.password=admin
 spring.data.mongodb.uri=mongodb://Petro:petro35@ds263172.mlab.com:63172/test?retryWrites=true&w=majority
+spring.data.mongodb.database=photocenter
