--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.freemarker.suffix: .ftl
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=cursova1
 spring.security.user.password=admin
-spring.data.mongodb.uri=mongodb://Petro:petro35@ds263172.mlab.com:63172/test?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://Evhen:aaaa4bb2@cluster0-91ydk.mongodb.net/test?retryWrites=true&w=majority
 spring.data.mongodb.database=photocenter
